--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,49 @@
-# ignore node_modules in any folder
+# ---------------------------
+# Angular + VS Code .gitignore
+# ---------------------------
+
+# dependencies
 node_modules/
+
+# Angular CLI cache and config
+.angular/
+
+# build outputs
+dist/
+out-tsc/
+
+# IDE & editor folders
+.vscode/
+.idea/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Environment files (if not public)
+src/environments/environment*.ts
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Temporary files
+*.tmp
+*.temp
+
+# Package manager lock files (optional if you don't want to track)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+
+# Coverage reports
+coverage/
+
+# Misc generated files
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
