--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/@arcgis/core/assets/esri/themes/light/main.css"
             ]
           },
           "configurations": {
@@ -91,7 +92,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/@arcgis/core/assets/esri/themes/light/main.css"
             ]
           }
         }
