--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "ES2022",
-    "module": "preserve"
+    "module": "preserve",
+    //"moduleResolution": "node16",
+    // "allowSyntheticDefaultImports": true,
+    // "esModuleInterop": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
